# NanoTrack_Tensorrt_Cpp

./: CMakeLists.txt  README.md  create_trt_engine.sh  main.cpp
include/: Nano_track.h  common.h
onnx/: nanotrack_backbone_exampler.onnx  nanotrack_backbone_template.onnx  nanotrack_head.onnx
